# api-gestao-projetos

./: Dockerfile  alembic.ini  compose.yaml  docker-cleanup.ps1  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fastapi_zero/: app.py  database.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todos.py  users.py
fastapi_zero/utils/: validators.py
migrations/: env.py
migrations/versions/: 39bd75ad7f5e_inserindo_o_campo_user_id_no_teams.py  65e01b252ac4_create_todos_table.py  6ffb6656dad5_initial_migration.py  78ac2b231d06_create_sprints_table.py  7cdaba92bb08_inserindo_o_campo_updated_at.py  9b4be51c8ee8_create_users_table.py  b8839391ece6_renomeando_coluna_user_id_para_current_.py  bc0f9b924f5d_create_project_table.py  c0d8dde02839_create_teams_table.py  cdc49c032762_ajuste_nos_campos_do_modelo_sprint.py  cf83ffeb786f_remove_todo_table.py  e3658d1595fc_inserindo_os_campos_created_at_e_.py  e7b1fd33a602_create_teams_users_association_table.py  e7f562142636_ajuste_nos_campos_do_modelo_sprint.py  edd7468a663a_remove_user_list_from_teams.py
task_flow/: app.py  database.py  models.py  schemas.py  security.py  settings.py
task_flow/routers/: auth.py  projects.py  sprints.py  teams.py  todos.py  users.py
task_flow/utils/: utils.py  validators.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_projects.py  test_security.py  test_teams.py  test_todo.py  test_users.py
tests/e2e/feature/: projects.feature  teams.feature  users.feature
tests/e2e/features/: auth.feature  projects.feature  teams.feature  users.feature
tests/e2e/steps/: test_projects_steps.py  test_teams_steps.py  test_users_steps.py
tests/features/steps/: test_teams_steps.py
tests/unit/: conftest.py  test_auth.py  test_db.py  test_projects.py  test_security.py  test_teams.py  test_todo.py  test_users.py
tests/utils/: fake_data.py  helpers.py
